fix animation overflow

--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -1,4 +1,5 @@
 .about {
+  overflow: hidden;
   &__content {
 
     @include onTablet {
