--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 56px;
 
-  cursor: default;
+  cursor: pointer;
   font-weight: 700;
   line-height: 27px;
   background: #fff;
@@ -16,12 +16,10 @@
   transition: all 0.3s;
 
   &:hover {
-    transform: scale(0.95);
     box-shadow: 1px 4px 16px 0 #e8e8f066;
   }
 
   &:active {
-    transform: scale(1.05);
     box-shadow: 1px 4px 16px 0 #e8e8f0a3;
   }
 
@@ -29,7 +27,7 @@
     margin-bottom: 48px;
 
     @include onTablet {
-      margin-bottom: 0;
+      margin-bottom: 5px;
     }
   }
 }
