--- a/src/styles/blocks/compare-bikes.scss
+++ b/src/styles/blocks/compare-bikes.scss
@@ -1,15 +1,16 @@
 .compare-bikes {
+  overflow: hidden;
   &__item {
     margin-bottom: 48px;
 
     transition: transform 0.3s;
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
     }
 
     &:last-child {
-      margin-bottom: 0;
+      margin-bottom: 10px;
     }
 
     @include onDesktop {
