--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -1,5 +1,5 @@
 .contacts {
-
+  overflow: hidden;
   &__info {
     margin: 0 0 24px;
   }
