--- a/src/styles/blocks/details.scss
+++ b/src/styles/blocks/details.scss
@@ -1,4 +1,5 @@
 .details {
+  overflow: hidden;
   &__photo-container {
     position: relative;
 
